# outlook-graph-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLIENT-INSTALL.md  Dockerfile  ONBOARDING-CLIENT.md  README.md  SECURITY.md  azure.yaml  pyproject.toml
infra/: main.bicep  main.parameters.json  resources.bicep
src/outlook_graph_mcp/: __init__.py  __main__.py  auth.py  config.py  graph.py  server.py  webapp.py
